--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.2",
@@ -32,6 +33,9 @@
         }
     },
     "scripts": {
+        "ide-helper-generate": "php artisan ide-helper:generate",
+        "ide-helper-models": "php artisan ide-helper:models -N",
+        "ide-helper-meta": "php artisan ide-helper:meta",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
