--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
         "psr-4": {
@@ -36,6 +37,8 @@
         "ide-helper-generate": "php artisan ide-helper:generate",
         "ide-helper-models": "php artisan ide-helper:models -N",
         "ide-helper-meta": "php artisan ide-helper:meta",
+        "phpcs": "phpcs",
+        "phpcbf": "phpcbf",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
